--- a/Ppt/251203_pitchpizza_transcription_v3.tex
+++ b/Ppt/251203_pitchpizza_transcription_v3.tex
@@ -184,19 +184,48 @@ I would like to mention that there is a selection issue because we only observe 
 
 \subsection*{Slide 16: demand and search decision}
 
-The buyer's utility includes a term that represents the utility from the monthly payments, where $F_j
+The buyer's utility includes a term that represents the utility from the monthly payments, where $F_j$
 
 
+Moving to the consumer side, we model the demand and search decision.On the top equation, you see the indirect utility buyer $i$ gets from firm $j$. This depends on three key components:First, the financial value of the annuity payment $F$, which is weighted by $\gamma(\theta)$. 
+Crucially, this weight depends on the consumer's risk type—healthier consumers who expect to live longer will value these payments more highly.
+
+Second, we include risk ratings $r_j$ and unobserved preference shocks $\xi_j$ to capture unobserved product characteristics like customer service or reputation. 
+
+
+
+The bottom two equations define the search rule. A consumer calculates the expected gain $G$ from searching—which is the difference in expected utility between the revised and initial stages. 
+We use expected utility to avoid selection into searching based on the idiosyncratic shocks. 
+
+The buyer chooses to search if his gain exceeds their idiosyncratic search cost $s_i$. Hence using the model we can derive the search probability. 
 
 
 
 \subsection*{Slide 17}
+
+Given 
+
+1. the dependence of the utility parameters on the riss type and 
+2. the selection into search based on the search cost
+
+the firms will not naively price using the signal they received. 
+
+Firms have to condition their beliefs on them being the chosen firm and on whether the buyer searched or not. 
+
+
+The integral weights the prior by the probability of the choice given the signal observed by the firm. 
+
+Given time constraints I just want to note that for non-searchers the expected value is conditioning only on the firm's own signal, whereas for searchers the firm conditions on the full vector of signals.
  
 \subsection*{Slide 18}
 
+Given the posteriors defined in the previous slide, we assume that firms set prices linearly on the posterior. 
+
+
+
 \subsection*{Slide 19 }
 
-
+Finally, we close the model by defining the firm's objective function. The total profit, $\pi_j$, is simply the sum of profits from the two market segments.The first integral represents the 'non-searcher' market. Here, the firm earns the margin from its initial offer, weighted by the probability that the consumer chooses them and decides not to search, denoted by $(1-\pi_1)$.The second integral is the 'searcher' market, or the aftermarket. Here, the firm earns the margin from its revised offer, weighted by the probability that the consumer does search, $\pi_1$.The firm maximizes this sum by simultaneously choosing the pricing parameters for both stages. This links the two markets: an aggressive initial price might win more non-searchers (first integral), but it reveals more information and changes the selection of types who proceed to the second stage (second integral).
 
 
 
