Remove obsolete pitchpizza presentation files
Deleted the old pitchpizza presentation source and build files, and renamed the transcription file for clarity. The main presentation source (251203_pitchpizza_v3.tex) was updated, reflecting a cleanup of unused or outdated assets.

--- a/Ppt/251203_pitchpizza_v3.tex
+++ b/Ppt/251203_pitchpizza_v3.tex
@@ -177,7 +177,7 @@ Diego Cussen
 
     % if it was only financing cost, it would be a monopoly
    
-     $S_i$: stock of savings, $F_{ij}$: per period annuity payment, $x_i$: buyer mortality factors (e.g. age, gender)
+     $W_i$: stock of savings, $F_{ij}$: per period annuity payment, $x_i$: buyer mortality factors (e.g. age, gender)
     
     %\item Firm heterogeneity: algorithm (mortality tables), financing costs ($r_j$) and risk ratings. 
     \item Firm heterogeneity: mortality tables and financing costs ($I_j$)
