Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,34 @@
 
+@article{geddes_effects_nodate,
+	title = {The {Effects} of {Price} {Regulation} in {Markets} with {Strategic} {Entry}: {Evidence} from {Health} {Insurance} {Markets}},
+	abstract = {Regulators often enact price restrictions with the goal of improving access to products at affordable prices. However, the design of these regulations may interact with firm entry and exit decisions in ways that mitigate the effects of pricing regulation or eliminate access to certain products entirely. In the US individual health insurance market, the Affordable Care Act established community rating areas made up of groups of counties in which insurers must offer plans at uniform prices, but insurers do not have to enter all counties in a rating area. They may partially enter a rating area by entering some counties but not others. Allowing partial entry creates trade-offs in rating area design: larger areas may support more competition, but heterogeneous areas may promote partial entry as firms choose to not enter high cost areas. To evaluate these trade-offs, I develop a model of insurer entry and pricing decisions and investigate how insurers respond to rating area design. I find that banning partial entry increases entry overall, but at the cost of higher average prices since costs are higher in previously non-entered counties. On net, consumer welfare increases. Further, increasing the size of a rating area improves consumer welfare most when marginal costs are similar. Regulators must balance promoting competition with pooling high and low cost consumers in rating area design.},
+	language = {en},
+	author = {Geddes, Eilidh},
+}
+
+@article{wu_nber_nodate,
+	title = {{NBER} {WORKING} {PAPER} {SERIES}},
+	abstract = {Conventional theory for private information of adverse selection predicts a positive correlation between insurance coverage and ex post risk. This paper shows the opposite in the life insurance market despite the clear evidence of private information on mortality risk. The reason for this contradictory result is the existence of multiple dimensions of private information. The paper discusses how the private information on insurance preference offsets the effect of the private information on mortality risk. A mixture density model is applied to disentangle these two effects.},
+	language = {en},
+	author = {Wu, Xi and Gan, Li},
+}
+
+@misc{handel_health_2013,
+	type = {Working {Paper}},
+	series = {Working {Paper} {Series}},
+	title = {Health {Insurance} for “{Humans}”: {Information} {Frictions}, {Plan} {Choice}, and {Consumer} {Welfare}},
+	shorttitle = {Health {Insurance} for “{Humans}”},
+	url = {https://www.nber.org/papers/w19373},
+	doi = {10.3386/w19373},
+	abstract = {Traditional models of insurance choice are predicated on fully informed and rational consumers protecting themselves from exposure to financial risk. In practice, choosing an insurance plan from a set of complex non-linear contracts is a complicated decision often made without full information on several potentially important dimensions. In this paper we combine new administrative data on health plan choices and claims with unique survey data on consumer information and other typically unobserved preference factors in order to separately identify risk preferences, information frictions, and perceived plan hassle costs. The administrative and survey data are linked at the individual level, allowing in-depth investigations of the links between these micro- foundations in both descriptive and choice-model based analyses. We find that consumers lack information on many important dimensions that they are typically assumed to understand, perceive high plan hassle costs, and make choices that depend on these frictions. Moreover, in the context of an expected utility model, including the additional frictions that we measure has direct implications for risk preference estimates, which are typically assumed to be the only source of persistent unobserved preference heterogeneity in such models. In our setting, we show that incorporating measures of these frictions leads to meaningful reductions in estimated consumer risk aversion. This result has both positive and normative implications since risk aversion generally has different welfare implications than information frictions. We assess the welfare impact of a counterfactual menu design and find that the welfare loss from risk exposure when additional frictions are not taken into account is more than double that when they are, illustrating the potential importance of our analysis for policy decisions.},
+	urldate = {2025-12-01},
+	publisher = {National Bureau of Economic Research},
+	author = {Handel, Benjamin R. and Kolstad, Jonathan T.},
+	month = aug,
+	year = {2013},
+	doi = {10.3386/w19373},
+}
+
 @article{spinnewijn_heterogeneity_2017,
 	title = {Heterogeneity, {Demand} for {Insurance}, and {Adverse} {Selection}},
 	volume = {9},
